--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#/menu" id="icon_home"><span>Home</span></a></li>
                 <li><a href="#/app/job-manager" id="icon_jobs"><span>Job Manager</span></a></li>
                 <li><a href="#/app/editor" id="icon_editor"><span>NC Editor</span></a></li>          
-                <li><a href="#/app/app-manager" id="icon_apps"><span>App Settings</span></a></li>
+                <li><a href="#/app/app-manager" id="icon_apps"><span>Apps</span></a></li>
                 <li><a href="#/app/config" id="icon_settings"><span>Configuration</span></a></li>
                 <li><a href="#/app/network-manager" id="icon_global"><span>Network</span></a></li>
                 <li><a href="#/app/macros" id="icon_folder"><span>Macros</span></a></li>
