--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -18,27 +18,33 @@
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
-
-            <section class="left show-for-medium-up fabmo-status" id="left-position-container">
-              <div class="small-6 columns">
-                <div class="state"></div>
-              </div>
-            </section>
  
             <!-- ***** Left-Menu Button Section ***** -->
             <section class="left-small left show-for-small-only">
               <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
             </section>
 
+            <section class="show-for-medium-up fabmo-status" id="left-position-container">
+              <div class="small-6 columns">
+                <div class="state"></div>
+              </div>
+            </section>
+
             <!-- ***** Tool Position Section ***** -->
-            <section class="right show-for-medium-up fabmo-status" id="right-position-container">
-              <div class="small-6 columns">
-                <label>X :<span class="posx right"></span></label>
-                <label>Y :<span class="posy right"></span></label>
+            <section class="right show-for-small-up fabmo-status" id="right-position-container">
+            <div style="display: table;">
+              <div style="display: table-row;">
+                <div style="display: table-cell;"><label>X : <span class="posx">X.XXX</span></label></div>
+                <div style="display: table-cell; width: 2em;"></div>
+                <div style="display: table-cell;"><label>Z : <span class="posz">Z.ZZZ</span></label></div>
               </div>
-              <div class="small-6 columns">
-                <label>Z :<span class="posz right"></span></label>
+              <div style="display: table-row;">
+                <div style="display: table-cell;"><label>Y : <span class="posy">Y.YYY</span></label></div>
+                <div style="display: table-cell;"></div>
+                <div style="display: table-cell;"></div>
+
               </div>
+            </div>
             </section>
 
             <!-- ***** Right-Menu Button Section ***** -->
