--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -86,7 +86,7 @@
                           <label style="border-top: 1px solid #eee;">X<span class="in">in</span><span class="posx pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
                           <button type="submit" class="newPos-submit" id="newPos-x" style="display:none;">zMove</button>
                         </div>
-                        <div class="small-3 columns home"><span class="button-zerox">X<label>0</label></span></div>
+                        <div class="small-3 columns home"><span class="button-zerox noselect">X<label>0</label></span></div>
                     </div>
                   </form>
                   <form>
@@ -95,7 +95,7 @@
                         <label>Y<span class="in">in</span><span class="posy pos"></span><input type"number" step="0.001" class="posy pos" style="display:none;" value=""></label>
                         <button type="submit" class="newPos-submit" id="newPos-y" style="display:none;">zMove</button>
                       </div>
-                      <div class="small-3 columns home"><span class="button-zeroy">Y<label>0</label></span></div>
+                      <div class="small-3 columns home"><span class="button-zeroy noselect">Y<label>0</label></span></div>
                     </div>
                   </form>
                   <form>
@@ -104,7 +104,7 @@
                         <label>Z<span class="in">in</span><span class="posz pos"></span><input type"number" step="0.001" class="posx pos" style="display:none;" value=""></label>
                         <button type="submit" class="newPos-submit" id="newPos-z" style="display:none;">zMove</button>
                       </div>
-                      <div class="small-3 columns home"><span class="button-zeroz">Z<label>0</label></span></div>
+                      <div class="small-3 columns home"><span class="button-zeroz noselect">Z<label>0</label></span></div>
                     </div>
                   </form>
                 </li>
